# klipper-docs-mcp

./: .gitignore  GEMINI.md  README.md  package-lock.json  package.json  pyproject.toml  run_server.sh  technical_specification.md  test_manual.py  tsconfig.json
klipper_docs_mcp/: __init__.py  config.py  exceptions.py  server.py  standalone.py
klipper_docs_mcp/services/: __init__.py  git_manager.py  search_engine.py  storage_manager.py
src/: config.ts  errors.ts  index.ts
src/services/: GitManager.ts  SearchEngine.ts  StorageManager.ts
tests/: StorageManager.test.ts  __init__.py  conftest.py  test_server.py
