[project]
name = "klipper-docs-mcp"
version = "0.1.0"
description = "MCP server for local Klipper documentation access"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
]

[project.scripts]
klipper-docs-mcp = "klipper_docs_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klipper_docs_mcp"]
